# sdk

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  go.mod  go.sum  requirements.in  requirements.txt
bazel/: BUILD  container.bzl  deps_0.bzl  deps_1.bzl  deps_2.bzl  extension_for_rules_oci.bzl  go_deps.bzl  go_macros.bzl  non_module_deps.bzl  python_oci_image.bzl
bazel/content_mirror/: permissive.cfg  strict.cfg
bazel/rbe_config/cc/: cc_toolchain_config.bzl
bazel/rbe_config/config/: BUILD.bazel
intrinsic/: BUILD
intrinsic/assets/: BUILD  baseclientutils.go  bundle_io.go  bundle_io_services.go  bundle_io_skills.go  clientutils.go  cmdutils.go  id_utils.cc  id_utils.py  idutils.go  imageutils.go  listutils.go  metadata_field_limits.go  typeutils.go  version.go
intrinsic/assets/catalog/: BUILD  assetdescriptions.go
intrinsic/assets/proto/: BUILD  asset_deployment.proto  asset_type.proto  installation_origin.proto  installed_assets.proto  metadata.proto  status_spec.proto  view.proto
intrinsic/assets/testing/: id_test_utils.cc
intrinsic/config/: BUILD  environments.go
intrinsic/config/proto/: BUILD
intrinsic/eigenmath/: BUILD  so3.h
intrinsic/executive/code/: BUILD  code_execution.py  code_execution_test.py
intrinsic/executive/proto/: BUILD  annotations.proto  behavior_call.proto  behavior_tree.proto  clips_snapshot.proto  code_execution.proto  code_execution_info_service.proto  executive_service.proto  executive_state.proto  log_items.proto  proto_builder.proto  run_metadata.proto  run_response.proto  test_message.proto  world_query.proto
intrinsic/geometry/proto/: BUILD  shape_data.proto
intrinsic/geometry/service/: BUILD  geometry_service.proto  geometry_service_types.proto
intrinsic/hardware/gpio/: BUILD  gpio_service.proto  opcua_gpio_service_config.proto  realtime_control_service_gpio_config.proto  signal.proto
intrinsic/hardware/gripper/: BUILD  gripper.proto
intrinsic/hardware/opcua_equipment/: BUILD
intrinsic/hardware/proto/: BUILD
intrinsic/icon/actions/: BUILD  adio.proto  adio_info.h  adio_utils.py  stop_utils.py  stop_utils_test.py
intrinsic/icon/cc_client/: BUILD  client.cc  client.h  session.cc  session.h  state_variable_path.cc  state_variable_path.h  stream.cc  stream.h
intrinsic/icon/common/: BUILD  builtins.h  id_types.h  part_properties.h  state_variable_path_constants.h  state_variable_path_util.cc
intrinsic/icon/control/: BUILD  realtime_clock_interface.cc  realtime_signal_types.h  slot_types.h  streaming_io_types.h
intrinsic/icon/equipment/: BUILD  channel_factory.cc  equipment_utils.cc  equipment_utils.h  equipment_utils.py
intrinsic/icon/examples/: BUILD  adio.cc  adio_lib.cc  adio_lib.h  blended_cartesian_move.cc  blended_cartesian_move_lib.cc  blended_joint_move.cc  blended_joint_move_lib.cc  introspection.cc  joint_move.cc  joint_move_lib.cc  joint_move_loop.cc  joint_then_cart_move.cc  joint_then_cart_move_lib.cc  simple_gripper.cc
intrinsic/icon/flatbuffers/: BUILD  control_types_copy.cc  control_types_copy.h  control_types_view.cc  control_types_view.h  flatbuffer_utils.h  flatbuffer_utils_test.cc  matrix_types.fbs  matrix_types_utils.cc  matrix_types_utils.h  transform_copy.cc  transform_copy.h  transform_types.cc  transform_types.h  transform_view.cc  transform_view.h
intrinsic/icon/hal/: BUILD  command_validator.cc  command_validator.h  get_hardware_interface.h  hardware_interface_handle.h  hardware_interface_registry.cc  hardware_interface_registry.h  hardware_interface_traits.h  hardware_module_init_context.h  hardware_module_interface.h  hardware_module_main.cc  hardware_module_main_util.cc  hardware_module_main_util.h  hardware_module_registry.h  hardware_module_runtime.cc  hardware_module_runtime.h  hardware_module_util.cc  hardware_module_util.h  icon_state_register.h  module_config.cc  module_config.h  realtime_clock.cc  realtime_clock.h  test_module.cc
intrinsic/icon/interprocess/: BUILD  binary_futex.cc  binary_futex.h  binary_futex_condition_variable.cc  binary_futex_condition_variable.h  lockable_binary_futex.h
intrinsic/icon/proto/: BUILD  acontis_ecat_device.proto  cart_space.proto  cart_space_conversion.cc  eigen_conversion_test.cc  generic_part_config.proto  io_block.proto  part_status.proto  service.proto  types.proto
intrinsic/icon/python/: BUILD  _session.py  _session_test.py  create_action_utils.py  errors.py  icon_api.py  icon_logging.py  icon_logging_test.py  proto_test.py  reactions.py  state_variable_path.py
intrinsic/icon/release/: BUILD  status_helpers.h
intrinsic/icon/server/: BUILD  (+3 more)
intrinsic/kinematics/: BUILD  validate_link_parameters.cc
intrinsic/logging/: BUILD  data_logger_client.cc  structured_logging_client.cc  structured_logging_client.h
intrinsic/math/: BUILD  almost_equals.h  gaussian_noise.cc  gaussian_noise.h  pose3.h  proto_conversion.cc  proto_conversion.h
intrinsic/motion_planning/: BUILD  conversions.cc  conversions.h  motion_planner_client.cc  motion_planner_client.h  motion_planner_client.py  motion_planner_client_py_doc.py
intrinsic/platform/: cc_fbs_library.bzl  flatbuffers.bzl
intrinsic/production/: BUILD
intrinsic/solutions/: BUILD  applications.py  applications_external_test.py  behavior_tree.py  behavior_tree_test.py  camera_utils.py  deployments.py  deployments_test.py  error_processing.py  error_processing_test.py  execution.py  execution_test.py  ipython.py  main.py  motion_planning.py  motion_planning_external_test.py  pbt_registration.py  perception.py  proto_building.py  proto_building_test.py  provided.py  providers.py  simulation.py  simulation_external_test.py  skill_utils.py  skills.py  skills_test.py  structured_logging.py  structured_logging_test.py  userconfig.py  worlds.py
intrinsic/testing/: BUILD  build_defs.bzl  grpctest.go
intrinsic/util/: BUILD  aggregate_type.h  aggregate_type_test.cc  atomic_sequence_num.h  eigen_test.cc  log_lines.cc  log_lines.h  proto_time.cc  proto_time.h  runfiles.go  string_type.h
intrinsic/workcell/: BUILD  workcell_api.py
(+852 files in other folders)
